# beanie-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mongo-setup.js  mongo-setup.sh  pyproject.toml
app/: main.py  settings.py
app/endpoints/: employee.py  monitoring.py  salary.py
app/schemas/: client.py  employee.py  salary_view.py
migrations/: 20231210154702_convert_salary.py
